--- a/leili.bib
+++ b/leili.bib
@@ -45,6 +45,55 @@ Our experiments in machine translation show \method gains of up to 3 BLEU score 
 While for the large WMT14 English-French task with 40 millions of sentence-pairs, our base model still significantly improves upon the state-of-the-art Transformer big model by more than 1 BLEU score.},
 }
 
+@Unpublished{bai2019triangular,
+  author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
+  note   = {in submission},
+  title  = {Triangular Neural Machine Translation under Indirect Supervision},
+  year   = {2019},
+}
+
+@Unpublished{bao2019pnat,
+  author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
+  note   = {in submission},
+  title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
+  year   = {2019},
+}
+
+@Unpublished{huang2019acutum,
+  author = {Xunpeng Huang and Zhengyang Liu and Zhe Wang and Yue Yu and Lei Li},
+  note   = {in submission},
+  title  = {Acutum: an Adaptive Angular Regularized Optimization Algorithm},
+  year   = {2019},
+}
+
+@Unpublished{shi2019dispersed,
+  author = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
+  note   = {in submission},
+  title  = {Dispersed Exponential Family Mixture Variational Auto-encoder},
+  year   = {2019},
+}
+
+@Unpublished{sun2019towards,
+  author = {Zewei Sun and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
+  note   = {in submission},
+  title  = {Towards Document-to-Document Neural Machine Translation and a Large Scale Dataset},
+  year   = {2019},
+}
+
+@Unpublished{ye2019variational,
+  author = {Rong Ye and Wenxian Shi and Hao Zhou and Lei Li},
+  note   = {in submission},
+  title  = {Variational Template Machine for Data-to-Text Generation},
+  year   = {2019},
+}
+
+@Unpublished{zheng2019mirror,
+  author = {Zaixiang Zheng and Hao Zhou and Shujian Huang and Jiajun Chen and Xinyu Dai and Lei Li},
+  note   = {in submission},
+  title  = {Mirror Generative Models for Neural Machine Translation},
+  year   = {2019},
+}
+
 @InProceedings{miao2019kernelized,
   author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Shi, Wenxian and Li, Lei},
   booktitle = {the 33rd Conference on Neural Information Processing Systems (NeurIPS)},
@@ -118,7 +167,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 @InProceedings{sun2019graspsnooker,
   author    = {Sun, Zhaoyue and Chen, Jiaze and Zhou, Hao and Zhou, Deyu and Li, Lei and Jiang, Mingmin},
   booktitle = {the 28th International Joint Conference on Artificial Intelligence ({IJCAI})},
-  title     = {GraspSnooker: Automatic Chinese Commentary Generation for Snooker Videos},
+  title     = {{GraspSnooker}: Automatic Chinese Commentary Generation for Snooker Videos},
   year      = {2019},
   month     = aug,
   note      = {Demos},
@@ -127,8 +176,8 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
   url       = {https://doi.org/10.24963/ijcai.2019/959},
 }
 
-@InProceedings{wen2019correct,
-  author    = {Wen, Rongxiang and Zhou, Hao and Huang, Shujian and Xia, Yifan and Li, Lei and Chen, Jiajun},
+@InProceedings{weng2019correct,
+  author    = {Weng, Rongxiang and Zhou, Hao and Huang, Shujian and Xia, Yifan and Li, Lei and Chen, Jiajun},
   booktitle = {the 28th International Joint Conference on Artificial Intelligence (IJCAI)},
   title     = {Correct-and-Memorize: Learning to Translate from Interactive Revisions},
   year      = {2019},
@@ -197,7 +246,7 @@ resolve word dependencies in novel sentences.},
 @InProceedings{miao2019cgmh,
   author    = {Miao, Ning and Zhou, Hao and Mou, Lili and Yan, Rui and Li, Lei},
   booktitle = {the 33rd {AAAI} Conference on Artificial Intelligence (AAAI)},
-  title     = {{CGMH:} Constrained Sentence Generation by Metropolis-Hastings Sampling},
+  title     = {{CGMH}: Constrained Sentence Generation by Metropolis-Hastings Sampling},
   year      = {2019},
   month     = jan,
   abstract  = {In real-world applications of natural language generation,
@@ -246,13 +295,11 @@ is released at https://github.com/NingMiao/CGMH},
   url       = {https://arxiv.org/abs/1808.09644},
 }
 
-@InProceedings{li2018jersey,
+@Misc{li2018jersey,
   author    = {Li, Gen and Xu, Shikun and Liu, Xiang and Li, Lei and Wang, Changhu},
-  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition workshops, Computer Vision in Sports},
+  month     = jun,
   title     = {Jersey Number Recognition with Semi-Supervised Spatial Transformer Network},
   year      = {2018},
-  month     = jun,
-  pages     = {1864 --1871},
   abstract  = {It is still a challenging task to recognize the jersey number 
 of players on the court in soccer match videos, as the
 jersey numbers are very small in the object detection task
@@ -269,7 +316,9 @@ a semi-supervised multi-task learning system, by labeling a
 small portion of the number areas in the dataset by quadrangle.
 Extensive experiments illustrate the effectiveness of
 the proposed framework.},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition workshops, Computer Vision in Sports},
   groups    = {workshop},
+  pages     = {1864 --1871},
 }
 
 @InProceedings{wu2018reinforced,
@@ -337,8 +386,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{dai2016cfo,
   author    = {Dai, Zihang and Li, Lei and Xu, Wei},
-  title     = {CFO: Conditional Focused Neural Question Answering with Large-scale Knowledge Bases},
   booktitle = {ACL},
+  title     = {{CFO}: Conditional Focused Neural Question Answering with Large-scale Knowledge Bases},
   year      = {2016},
   month     = jul,
   abstract  = {How can we enable computers to automatically answer questions like ``Who created the character Harry Potter''? Carefully built knowledge bases provide rich sources of facts. However, it remains a challenge to answer factoid questions raised in natural language due to numerous expressions of one question. In particular, we focus on the most common questions --- ones that can be answered with a single fact in the knowledge base. We propose CFO, a Conditional Focused neural-network-based approach to answering factoid questions with knowledge bases. Our approach first zooms in a question to find more probable candidate subject mentions, and infers the final answers with a unified conditional probabilistic framework. Powered by deep recurrent neural networks and neural embeddings, our proposed CFO achieves an accuracy of 75.7\% on a dataset of 108k questions - the largest public one to date. It outperforms the current state of the art by an absolute margin of 11.8\%.},
@@ -347,42 +396,42 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2016.07.04},
 }
 
-@InProceedings{lu2015twisted,
+@Misc{lu2015twisted,
   author    = {Lu, Zefu and Li, Lei and Xu, Wei},
-  booktitle = {Bay Area Machine Learning Symposium},
   title     = {Twisted Recurrent Network for Named Entity Recognition},
   year      = {2015},
+  booktitle = {Bay Area Machine Learning Symposium},
   owner     = {leili},
   timestamp = {2015.11.03},
 }
 
-@InProceedings{pham2015optimization,
+@Misc{pham2015optimization,
   author    = {Pham, Hieu and Dai, Zihang and Li, Lei},
-  booktitle = {Bay Area Machine Learning Symposium},
   title     = {On Optimization Algorithms for Recurrent Networks with Long Short-Term Memory},
   year      = {2015},
+  booktitle = {Bay Area Machine Learning Symposium},
   owner     = {leili},
   timestamp = {2015.11.03},
 }
 
-@InProceedings{wu2014bfit,
+@Misc{wu2014bfit,
   author    = {Wu, Yi and Li, Lei and Russell, Stuart J.},
   title     = {BFiT: From Possible-World Semantics to Random-Evaluation Semantics in Open Universe},
-  booktitle = {Neural Information Processing Systems, Probabilistic Programming workshop},
   year      = {2014},
   abstract  = {In recent years, several probabilistic programming languages (PPLs) have emerged, such as Bayesian Logic (BLOG), Church, and Figaro. These languages can be classified into two categories: PPLs interpreted using possible-world se- mantics and ones using random-evaluation semantics. In this paper, we explic- itly analyze the equivalence between these two semantics in the context of open- universe probability models (OUPMs). We propose a novel dynamic memoization technique to construct OUPMs using procedural instructions in random-evaluation based PPLs. We implemented a translator named BFiT, which converts code in BLOG (possible-world based) to Figaro (random-evaluation based). The trans- lated program in Figaro exhibits a merely constant blowup factor in program size while yielding the same inference results as the original model in BLOG.},
+  booktitle = {Neural Information Processing Systems, Probabilistic Programming workshop},
   file      = {:pubs/wu2014bfit - BFiT_ From Possible-World Semantics to Random-Evaluation Semantics in Open Universe.pdf:PDF},
   owner     = {leili},
   slides    = {pubs/wu-2014-bfit-poster.pdf},
   timestamp = {2014.12.16},
 }
 
-@InProceedings{du2014maxios,
+@Misc{du2014maxios,
   author    = {Du, Simon Shaolei and Liu, Yilin and Chen, Boyi and Li, Lei},
   title     = {Maxios: Large Scale Nonnegative Matrix Factorization for Collaborative Filtering},
-  booktitle = {Neural Information Processing Systems, workshop on Distributed Machine Learning and Matrix Computations},
   year      = {2014},
   abstract  = {Nonnegative matrix factorization proved useful in many applications, including collaborative filtering – from existing ratings data one would like to predict new product ratings by users. However, factorizing a user-product score matrix is computation and memory intensive. We propose Maxios, a novel approach to fill missing values for large scale and highly sparse matrices efficiently and ac- curately. We formulate the matrix-completion problem as weighted nonnegative matrix factorization. In addition, we develop distributed update rules using alter- nating direction method of multipliers. We have implemented the Maxios system on top of Spark, a distributed in-memory computation framework. Experiments on commercial clusters show that Maxios is competitive in terms of scalability and accuracy against the existing solutions on a variety of datasets.},
+  booktitle = {Neural Information Processing Systems, workshop on Distributed Machine Learning and Matrix Computations},
   file      = {:pubs/du2014maxios - Maxios_ Large Scale Nonnegative Matrix Factorization for Collaborative Filtering.pdf:PDF},
   owner     = {leili},
   slides    = {pubs/du-2014-maxios-poster.pdf},
@@ -458,20 +507,19 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{rogers2013multilinear,
   author    = {Rogers, Mark and Li, Lei and Russell, Stuart J.},
-  booktitle = {the 27th Conference on Neural Information Processing Systems},
+  booktitle = {the 27th Conference on Neural Information Processing Systems(NeurIPS)},
   title     = {Multilinear Dynamical Systems for Tensor Time Series},
   year      = {2013},
   file      = {:pubs/rogers2013multilinear - Multilinear Dynamical Systems for Tensor Time Series.pdf:PDF},
   owner     = {leili},
   software  = {software/mlds-r662.zip},
   timestamp = {2013.09.11},
-  url       = {mlds/index.html},
 }
 
 @InProceedings{matsubara2013f,
   author    = {Matsubara, Yasuko and Li, Lei and Papalexakis, Evangelos E. and Lo, David and Sakurai, Yasushi and Faloutsos, Christos},
-  title     = {F-Trail: Finding Patterns in Taxi Trajectories},
   booktitle = {The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)},
+  title     = {{F-Trail}: Finding Patterns in Taxi Trajectories},
   year      = {2013},
   pages     = {86--98},
   file      = {:pubs/matsubara-The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)13-ftrail.pdf:PDF},
@@ -490,8 +538,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{henderson2012rolx,
   author    = {Henderson, Keith and Gallagher, Brian and Eliassi-Rad, Tina and Tong, Hanghang and Basu, Sugato and Akoglu, Leman and Koutra, Danai and Faloutsos, Christos and Li, Lei},
-  title     = {RolX: Structural Role Extraction and Mining in Large Graphs},
   booktitle = {KDD '12: Proceeding of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  title     = {{RolX}: Structural Role Extraction and Mining in Large Graphs},
   year      = {2012},
   address   = {New York, NY, USA},
   publisher = {ACM},
@@ -512,11 +560,11 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2012.07.18},
 }
 
-@InProceedings{liu2011mobile,
+@Misc{liu2011mobile,
   author    = {Liu, Siyuan and Li, Lei and Faloutsos, Christos and Ni, Lionel},
   title     = {Mobile Phone Graph Evolution: Findings, Model and Interpretation},
-  booktitle = {IEEE International Conference on Data Mining, workshop on Data Mining Technologies for Computational Collective Intelligence},
   year      = {2011},
+  booktitle = {IEEE International Conference on Data Mining, workshop on Data Mining Technologies for Computational Collective Intelligence},
   file      = {:pubs/liu2011mobile - Mobile Phone Graph Evolution_ Findings, Model and Interpretation.pdf:PDF},
   owner     = {leili},
   timestamp = {2011.11.30},
@@ -569,8 +617,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{sakurai2011windmine,
   author    = {Sakurai, Yasushi and Li, Lei and Matsubara, Yasuko and Faloutsos, Christos},
-  title     = {WindMine: Fast and Effective Mining of Web-click Sequences},
   booktitle = {SIAM International Conference on Data Mining},
+  title     = {{WindMine}: Fast and Effective Mining of Web-click Sequences},
   year      = {2011},
   file      = {:pubs/sakurai2011windmine - WindMine_ Fast and Effective Mining of Web-click Sequences.pdf:PDF},
   owner     = {leili},
@@ -588,14 +636,14 @@ proposed method can obtain more accurate text classification results.},
   timestamp    = {2011.09.01},
 }
 
-@InProceedings{li2010fast,
+@Misc{li2010fast,
   author    = {Li, Lei},
   title     = {Fast Algorithms for Time Series Mining},
-  booktitle = {26th IEEE International Conference on Data Engineering, PHD Workshop},
   year      = {2010},
-  pages     = {341--344},
+  booktitle = {26th IEEE International Conference on Data Engineering, PHD Workshop},
   file      = {:pubs/li2010fast - Fast Algorithms for Time Series Mining.pdf:PDF},
   owner     = {leili},
+  pages     = {341--344},
   slides    = {pubs/li-icde10-slides.pdf},
   timestamp = {2010.03.21},
 }
@@ -619,13 +667,13 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2010bolero,
   author    = {Li, Lei and McCann, James and Pollard, Nancy and Faloutsos, Christos},
-  title     = {BoLeRO: a principled technique for including bone length constraints in motion capture occlusion filling},
   booktitle = {Proceedings of the 2010 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+  title     = {{BoLeRO}: a principled technique for including bone length constraints in motion capture occlusion filling},
   year      = {2010},
-  series    = {SCA '10},
-  pages     = {179--188},
   address   = {Aire-la-Ville, Switzerland, Switzerland},
+  pages     = {179--188},
   publisher = {Eurographics Association},
+  series    = {SCA '10},
   acmid     = {1921454},
   file      = {:pubs/li2010bolero - BoLeRO_ a principled technique for including bone length constraints in motion capture occlusion filling.pdf:PDF;demo:pubs/BoLeRO-final-v1_xvid.avi:URL},
   location  = {Madrid, Spain},
@@ -673,8 +721,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2009dynammo,
   author    = {Li, Lei and McCann, James and Pollard, Nancy and Faloutsos, Christos},
-  title     = {DynaMMo: Mining and Summarization of Coevolving Sequences with Missing Values},
   booktitle = {KDD '09: Proceeding of the 15th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  title     = {{DynaMMo}: Mining and Summarization of Coevolving Sequences with Missing Values},
   year      = {2009},
   address   = {New York, NY, USA},
   publisher = {ACM},
@@ -687,40 +735,40 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2009.05.01},
 }
 
-@InProceedings{guo2009tailoring,
+@Misc{guo2009tailoring,
   author    = {Guo, Fan and Li, Lei and Faloutsos, Christos},
   title     = {Tailoring click models to user goals},
-  booktitle = {Proceedings of the 2009 workshop on Web Search Click Data},
   year      = {2009},
-  series    = {WSCD '09},
-  pages     = {88--92},
-  address   = {New York, NY, USA},
-  publisher = {ACM},
   acmid     = {1507523},
+  address   = {New York, NY, USA},
+  booktitle = {Proceedings of the 2009 workshop on Web Search Click Data},
   doi       = {http://doi.acm.org/10.1145/1507509.1507523},
   isbn      = {978-1-60558-434-8},
   keywords  = {click model, user behavior, web search},
   location  = {Barcelona, Spain},
   numpages  = {5},
+  pages     = {88--92},
+  publisher = {ACM},
+  series    = {WSCD '09},
 }
 
-@InProceedings{xu2008inferring,
+@Misc{xu2008inferring,
   author    = {Xu, Wanhong and Zhou, Xi and Li, Lei},
-  booktitle = {IEEE 24th International Conference on Data Engineering workshops},
   title     = {Inferring privacy information via social relations},
   year      = {2008},
-  pages     = {525--530},
+  booktitle = {IEEE 24th International Conference on Data Engineering workshops},
   doi       = {10.1109/ICDEW.2008.4498373},
   groups    = {workshop},
+  pages     = {525--530},
 }
 
 @InProceedings{li2008cut,
   author    = {Li, Lei and Fu, Wenjie and Guo, Fan and Mowry, Todd C. and Faloutsos, Christos},
-  title     = {Cut-and-stitch: efficient parallel learning of linear dynamical systems on smps},
   booktitle = {KDD '08: Proceeding of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  title     = {{Cut-and-Stitch}: efficient parallel learning of linear dynamical systems on smps},
   year      = {2008},
-  pages     = {471--479},
   address   = {New York, NY, USA},
+  pages     = {471--479},
   publisher = {ACM},
   abstract  = {Multi-core processors with ever increasing number of cores per chip are becoming prevalent in modern parallel computing. Our goal is to make use of the multi-core as well as multi-processor architectures to speed up data mining algorithms. Specifically, we present a parallel algorithm for approximate learning of Linear Dynamical Systems (LDS), also known as Kalman Filters (KF). LDSs are widely used in time series analysis such as motion capture modeling and visual tracking etc. We propose Cut-And-Stitch (CAS), a novel method to handle the data dependencies due to the chain structure of hidden variables in LDS, so as to parallelize the EM- based parameter learning algorithm. We implement the algorithm using OpenMP on both a supercomputer and a quad-core commercial desktop. The experimental results show that parallel algorithms using Cut-And-Stitch achieve comparable accuracy and almost linear speedups over the serial version. In addition, Cut-And-Stitch can be generalized to other models with similar linear structures such as Hidden Markov Models (HMM) and Switching Kalman Filters (SKF).},
   file      = {:pubs/li2008cut - Cut-and-stitch_ efficient parallel learning of linear dynamical systems on smps.pdf:PDF},
@@ -754,13 +802,13 @@ proposed method can obtain more accurate text classification results.},
 
 @Article{guo2008c,
   author    = {Guo, Fan and Li, Lei and Faloutsos, Christos and Xing, Eric P.},
-  title     = {C-DEM: a multi-modal query system for Drosophila Embryo databases},
   journal   = {The Proceedings of the Very Large Data Bases Endowment (VLDB)},
+  title     = {{C-DEM}: a multi-modal query system for Drosophila Embryo databases},
   year      = {2008},
-  volume    = {1},
-  pages     = {1508--1511},
-  month     = aug,
   issn      = {2150-8097},
+  month     = aug,
+  pages     = {1508--1511},
+  volume    = {1},
   acmid     = {1454214},
   file      = {:pubs/guo2008c - C-DEM_ a multi-modal query system for Drosophila Embryo databases.pdf:PDF},
   issue     = {2},
