--- a/leili.bib
+++ b/leili.bib
@@ -12,7 +12,7 @@
 @InProceedings{wang2020task,
   author    = {Xinlong Wang and Wei Yin and Tao Kong and Yuning Jiang and Lei Li and Chunhua Shen},
   booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
-  title     = {Task-Aware Monocular Depth Estimation for 3D Object Detection},
+  title     = {Task-Aware Monocular Depth Estimation for {3D} Object Detection},
   year      = {2020},
   month     = feb,
   abstract  = {Monocular depth estimation enables 3D perception from a single 2D image, thus attracting much research attention for years. Almost all methods treat foreground and background regions (``things and stuff'') in an image equally. However, not all pixels are equal. Depth of foreground objects plays a crucial role in 3D object recognition and localization. To date how to boost the depth prediction accuracy of foreground objects is rarely discussed. In this paper, we first analyse the data distributions and interaction of foreground and background, then propose the foreground-background separated monocular depth estimation (ForeSeE) method, to estimate the foreground depth and background depth using separate optimization objectives and depth decoders. Our method significantly improves the depth estimation performance on foreground objects. Applying ForeSeE to 3D object detection, we achieve 7.5 AP gains and set new state-of-the-art results among other monocular methods.},
@@ -30,7 +30,7 @@
 @InProceedings{yang2020towards,
   author    = {Jiacheng Yang and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Weinan Zhang and Yong Yu and Lei Li},
   booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
-  title     = {Towards Making the Most of BERT in Neural Machine Translation},
+  title     = {Towards Making the Most of {BERT} in Neural Machine Translation},
   year      = {2020},
   month     = feb,
   abstract  = {GPT-2 and BERT demonstrate the effectiveness of using pre-trained language models (LMs) on various natural language processing tasks. However, LM fine-tuning often suffers from catastrophic forgetting when applied to resource-rich tasks.
@@ -97,7 +97,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 @InProceedings{miao2019kernelized,
   author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Shi, Wenxian and Li, Lei},
   booktitle = {the 33rd Conference on Neural Information Processing Systems (NeurIPS)},
-  title     = {Kernelized Bayesian Softman for Text Generation},
+  title     = {Kernelized {Bayesian} Softmax for Text Generation},
   year      = {2019},
   month     = dec,
 }
@@ -114,7 +114,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 @InProceedings{wang2019towards,
   author    = {Wang, Mingxuan and Xie, Jun and Tan, Zhixing and Su, Jinsong and Xiong, Deyi and Li, Lei},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
-  title     = {Towards Linear Time Neural Machine Translation with Capsule Networks},
+  title     = {Towards Linear Time Neural Machine Translation with {Capsule} Networks},
   year      = {2019},
   month     = nov,
   abstract  = {In this study, we first investigate a novel capsule network with dynamic routing for linear time Neural Machine Translation (NMT), referred as CAPSNMT. CAPSNMT uses an aggregation mechanism to map the source sentence into a matrix with pre-determined size, and then applys a deep LSTM network to decode the target sequence from the source representation. Unlike the previous work (Sutskever et al., 2014) to store the source sentence with a passive and bottom-up way, the dynamic routing policy encodes the source sentence with an iterative process to decide the credit attribution between nodes from lower and higher layers. CAPSNMT has two core properties: it runs in time that is linear in the length of the sequences and provides a more flexible way to aggregate the part-whole information of the source sentence. On WMT14 English-German task and a larger WMT14 English-French task, CAPSNMT achieves comparable results with the Transformer system. We also devise new hybrid architectures intended to combine the strength of CAPSNMT and the RNMT model. Our hybrid models obtain state-of-the-arts results on both benchmark datasets. To the best of our knowledge, this is the first work that capsule networks have been empirically inves- tigated for sequence to sequence problems},
@@ -167,7 +167,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 @InProceedings{sun2019graspsnooker,
   author    = {Sun, Zhaoyue and Chen, Jiaze and Zhou, Hao and Zhou, Deyu and Li, Lei and Jiang, Mingmin},
   booktitle = {the 28th International Joint Conference on Artificial Intelligence ({IJCAI})},
-  title     = {{GraspSnooker}: Automatic Chinese Commentary Generation for Snooker Videos},
+  title     = {{GraspSnooker}: Automatic {Chinese} Commentary Generation for Snooker Videos},
   year      = {2019},
   month     = aug,
   note      = {Demos},
@@ -179,7 +179,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 @InProceedings{weng2019correct,
   author    = {Weng, Rongxiang and Zhou, Hao and Huang, Shujian and Xia, Yifan and Li, Lei and Chen, Jiajun},
   booktitle = {the 28th International Joint Conference on Artificial Intelligence (IJCAI)},
-  title     = {Correct-and-Memorize: Learning to Translate from Interactive Revisions},
+  title     = {{Correct-and-Memorize}: Learning to Translate from Interactive Revisions},
   year      = {2019},
   month     = aug,
   note      = {Oral Presentation},
@@ -295,12 +295,14 @@ is released at https://github.com/NingMiao/CGMH},
   url       = {https://arxiv.org/abs/1808.09644},
 }
 
-@Misc{li2018jersey,
-  author    = {Li, Gen and Xu, Shikun and Liu, Xiang and Li, Lei and Wang, Changhu},
-  month     = jun,
-  title     = {Jersey Number Recognition with Semi-Supervised Spatial Transformer Network},
-  year      = {2018},
-  abstract  = {It is still a challenging task to recognize the jersey number 
+@InProceedings{li2018jersey,
+  author       = {Li, Gen and Xu, Shikun and Liu, Xiang and Li, Lei and Wang, Changhu},
+  booktitle    = {IEEE Conference on Computer Vision and Pattern Recognition workshops, Computer Vision in Sports},
+  title        = {Jersey Number Recognition with Semi-Supervised Spatial Transformer Network},
+  year         = {2018},
+  month        = jun,
+  pages        = {1864 --1871},
+  abstract     = {It is still a challenging task to recognize the jersey number 
 of players on the court in soccer match videos, as the
 jersey numbers are very small in the object detection task
 and annotated data are not easy to collect. Based on the
@@ -316,9 +318,7 @@ a semi-supervised multi-task learning system, by labeling a
 small portion of the number areas in the dataset by quadrangle.
 Extensive experiments illustrate the effectiveness of
 the proposed framework.},
-  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition workshops, Computer Vision in Sports},
-  groups    = {workshop},
-  pages     = {1864 --1871},
+  entrysubtype = {workshop},
 }
 
 @InProceedings{wu2018reinforced,
@@ -414,34 +414,36 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2015.11.03},
 }
 
-@Misc{wu2014bfit,
-  author    = {Wu, Yi and Li, Lei and Russell, Stuart J.},
-  title     = {BFiT: From Possible-World Semantics to Random-Evaluation Semantics in Open Universe},
-  year      = {2014},
-  abstract  = {In recent years, several probabilistic programming languages (PPLs) have emerged, such as Bayesian Logic (BLOG), Church, and Figaro. These languages can be classified into two categories: PPLs interpreted using possible-world se- mantics and ones using random-evaluation semantics. In this paper, we explic- itly analyze the equivalence between these two semantics in the context of open- universe probability models (OUPMs). We propose a novel dynamic memoization technique to construct OUPMs using procedural instructions in random-evaluation based PPLs. We implemented a translator named BFiT, which converts code in BLOG (possible-world based) to Figaro (random-evaluation based). The trans- lated program in Figaro exhibits a merely constant blowup factor in program size while yielding the same inference results as the original model in BLOG.},
-  booktitle = {Neural Information Processing Systems, Probabilistic Programming workshop},
-  file      = {:pubs/wu2014bfit - BFiT_ From Possible-World Semantics to Random-Evaluation Semantics in Open Universe.pdf:PDF},
-  owner     = {leili},
-  slides    = {pubs/wu-2014-bfit-poster.pdf},
-  timestamp = {2014.12.16},
+@InProceedings{wu2014bfit,
+  author       = {Wu, Yi and Li, Lei and Russell, Stuart J.},
+  booktitle    = {Neural Information Processing Systems, Probabilistic Programming workshop},
+  title        = {{BFiT}: From Possible-World Semantics to Random-Evaluation Semantics in Open Universe},
+  year         = {2014},
+  abstract     = {In recent years, several probabilistic programming languages (PPLs) have emerged, such as Bayesian Logic (BLOG), Church, and Figaro. These languages can be classified into two categories: PPLs interpreted using possible-world se- mantics and ones using random-evaluation semantics. In this paper, we explic- itly analyze the equivalence between these two semantics in the context of open- universe probability models (OUPMs). We propose a novel dynamic memoization technique to construct OUPMs using procedural instructions in random-evaluation based PPLs. We implemented a translator named BFiT, which converts code in BLOG (possible-world based) to Figaro (random-evaluation based). The trans- lated program in Figaro exhibits a merely constant blowup factor in program size while yielding the same inference results as the original model in BLOG.},
+  entrysubtype = {workshop},
+  file         = {:pubs/wu2014bfit - BFiT_ From Possible-World Semantics to Random-Evaluation Semantics in Open Universe.pdf:PDF},
+  owner        = {leili},
+  slides       = {pubs/wu-2014-bfit-poster.pdf},
+  timestamp    = {2014.12.16},
 }
 
-@Misc{du2014maxios,
-  author    = {Du, Simon Shaolei and Liu, Yilin and Chen, Boyi and Li, Lei},
-  title     = {Maxios: Large Scale Nonnegative Matrix Factorization for Collaborative Filtering},
-  year      = {2014},
-  abstract  = {Nonnegative matrix factorization proved useful in many applications, including collaborative filtering – from existing ratings data one would like to predict new product ratings by users. However, factorizing a user-product score matrix is computation and memory intensive. We propose Maxios, a novel approach to fill missing values for large scale and highly sparse matrices efficiently and ac- curately. We formulate the matrix-completion problem as weighted nonnegative matrix factorization. In addition, we develop distributed update rules using alter- nating direction method of multipliers. We have implemented the Maxios system on top of Spark, a distributed in-memory computation framework. Experiments on commercial clusters show that Maxios is competitive in terms of scalability and accuracy against the existing solutions on a variety of datasets.},
-  booktitle = {Neural Information Processing Systems, workshop on Distributed Machine Learning and Matrix Computations},
-  file      = {:pubs/du2014maxios - Maxios_ Large Scale Nonnegative Matrix Factorization for Collaborative Filtering.pdf:PDF},
-  owner     = {leili},
-  slides    = {pubs/du-2014-maxios-poster.pdf},
-  timestamp = {2014.12.16},
+@InProceedings{du2014maxios,
+  author       = {Du, Simon Shaolei and Liu, Yilin and Chen, Boyi and Li, Lei},
+  booktitle    = {Neural Information Processing Systems, workshop on Distributed Machine Learning and Matrix Computations},
+  title        = {Maxios: Large Scale Nonnegative Matrix Factorization for Collaborative Filtering},
+  year         = {2014},
+  abstract     = {Nonnegative matrix factorization proved useful in many applications, including collaborative filtering – from existing ratings data one would like to predict new product ratings by users. However, factorizing a user-product score matrix is computation and memory intensive. We propose Maxios, a novel approach to fill missing values for large scale and highly sparse matrices efficiently and ac- curately. We formulate the matrix-completion problem as weighted nonnegative matrix factorization. In addition, we develop distributed update rules using alter- nating direction method of multipliers. We have implemented the Maxios system on top of Spark, a distributed in-memory computation framework. Experiments on commercial clusters show that Maxios is competitive in terms of scalability and accuracy against the existing solutions on a variety of datasets.},
+  entrysubtype = {workshop},
+  file         = {:pubs/du2014maxios - Maxios_ Large Scale Nonnegative Matrix Factorization for Collaborative Filtering.pdf:PDF},
+  owner        = {leili},
+  slides       = {pubs/du-2014-maxios-poster.pdf},
+  timestamp    = {2014.12.16},
 }
 
 @InProceedings{juan2014poisson,
   author    = {Juan, Da-Cheng and Li, Lei and Peng, Huan-Kai and Marculescu, Diana and Faloutsos, Christos},
-  title     = {Beyond Poisson: Modeling Inter-Arrival Times of Requests in a Datacenter},
   booktitle = {The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)},
+  title     = {Beyond {Poisson}: Modeling Inter-Arrival Times of Requests in a Datacenter},
   year      = {2014},
   file      = {:pubs/juan2014poisson - Beyond Poisson_ Modeling Inter-Arrival Times of Requests in a Datacenter.pdf:PDF},
   owner     = {leili},
@@ -560,14 +562,15 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2012.07.18},
 }
 
-@Misc{liu2011mobile,
-  author    = {Liu, Siyuan and Li, Lei and Faloutsos, Christos and Ni, Lionel},
-  title     = {Mobile Phone Graph Evolution: Findings, Model and Interpretation},
-  year      = {2011},
-  booktitle = {IEEE International Conference on Data Mining, workshop on Data Mining Technologies for Computational Collective Intelligence},
-  file      = {:pubs/liu2011mobile - Mobile Phone Graph Evolution_ Findings, Model and Interpretation.pdf:PDF},
-  owner     = {leili},
-  timestamp = {2011.11.30},
+@InProceedings{liu2011mobile,
+  author       = {Liu, Siyuan and Li, Lei and Faloutsos, Christos and Ni, Lionel},
+  booktitle    = {IEEE International Conference on Data Mining, workshop on Data Mining Technologies for Computational Collective Intelligence},
+  title        = {Mobile Phone Graph Evolution: Findings, Model and Interpretation},
+  year         = {2011},
+  entrysubtype = {workshop},
+  file         = {:pubs/liu2011mobile - Mobile Phone Graph Evolution_ Findings, Model and Interpretation.pdf:PDF},
+  owner        = {leili},
+  timestamp    = {2011.11.30},
 }
 
 @InProceedings{henderson2011its,
@@ -586,8 +589,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2011thermocast,
   author    = {Li, Lei and Liang, Chieh-Jan Mike and Liu, Jie and Nath, Suman and Terzis, Andreas and Faloutsos, Christos},
-  title     = {ThermoCast: A Cyber-Physical Forecasting Model for Data Centers},
   booktitle = {KDD '11: Proceeding of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  title     = {{ThermoCast}: A Cyber-Physical Forecasting Model for Data Centers},
   year      = {2011},
   address   = {New York, NY, USA},
   publisher = {ACM},
@@ -636,16 +639,17 @@ proposed method can obtain more accurate text classification results.},
   timestamp    = {2011.09.01},
 }
 
-@Misc{li2010fast,
-  author    = {Li, Lei},
-  title     = {Fast Algorithms for Time Series Mining},
-  year      = {2010},
-  booktitle = {26th IEEE International Conference on Data Engineering, PHD Workshop},
-  file      = {:pubs/li2010fast - Fast Algorithms for Time Series Mining.pdf:PDF},
-  owner     = {leili},
-  pages     = {341--344},
-  slides    = {pubs/li-icde10-slides.pdf},
-  timestamp = {2010.03.21},
+@InProceedings{li2010fast,
+  author       = {Li, Lei},
+  booktitle    = {26th IEEE International Conference on Data Engineering, PHD Workshop},
+  title        = {Fast Algorithms for Time Series Mining},
+  year         = {2010},
+  pages        = {341--344},
+  entrysubtype = {workshop},
+  file         = {:pubs/li2010fast - Fast Algorithms for Time Series Mining.pdf:PDF},
+  owner        = {leili},
+  slides       = {pubs/li-icde10-slides.pdf},
+  timestamp    = {2010.03.21},
 }
 
 @InProceedings{henderson2010metric,
@@ -735,31 +739,32 @@ proposed method can obtain more accurate text classification results.},
   timestamp = {2009.05.01},
 }
 
-@Misc{guo2009tailoring,
-  author    = {Guo, Fan and Li, Lei and Faloutsos, Christos},
-  title     = {Tailoring click models to user goals},
-  year      = {2009},
-  acmid     = {1507523},
-  address   = {New York, NY, USA},
-  booktitle = {Proceedings of the 2009 workshop on Web Search Click Data},
-  doi       = {http://doi.acm.org/10.1145/1507509.1507523},
-  isbn      = {978-1-60558-434-8},
-  keywords  = {click model, user behavior, web search},
-  location  = {Barcelona, Spain},
-  numpages  = {5},
-  pages     = {88--92},
-  publisher = {ACM},
-  series    = {WSCD '09},
+@InProceedings{guo2009tailoring,
+  author       = {Guo, Fan and Li, Lei and Faloutsos, Christos},
+  booktitle    = {Proceedings of the 2009 workshop on Web Search Click Data},
+  title        = {Tailoring click models to user goals},
+  year         = {2009},
+  address      = {New York, NY, USA},
+  pages        = {88--92},
+  publisher    = {ACM},
+  series       = {WSCD '09},
+  acmid        = {1507523},
+  doi          = {http://doi.acm.org/10.1145/1507509.1507523},
+  entrysubtype = {workshop},
+  isbn         = {978-1-60558-434-8},
+  keywords     = {click model, user behavior, web search},
+  location     = {Barcelona, Spain},
+  numpages     = {5},
 }
 
-@Misc{xu2008inferring,
-  author    = {Xu, Wanhong and Zhou, Xi and Li, Lei},
-  title     = {Inferring privacy information via social relations},
-  year      = {2008},
-  booktitle = {IEEE 24th International Conference on Data Engineering workshops},
-  doi       = {10.1109/ICDEW.2008.4498373},
-  groups    = {workshop},
-  pages     = {525--530},
+@InProceedings{xu2008inferring,
+  author       = {Xu, Wanhong and Zhou, Xi and Li, Lei},
+  booktitle    = {IEEE 24th International Conference on Data Engineering workshops},
+  title        = {Inferring privacy information via social relations},
+  year         = {2008},
+  pages        = {525--530},
+  doi          = {10.1109/ICDEW.2008.4498373},
+  entrysubtype = {workshop},
 }
 
 @InProceedings{li2008cut,
