adding aaai papers

--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,98 @@
 % Encoding: UTF-8
 
+@Unpublished{bai2020self,
+  author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
+  title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
+  year   = {2020},
+}
+
+@Unpublished{bai2020triangular,
+  author   = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
+  title    = {Triangular Unsupervised Neural Machine Translation},
+  year     = {2020},
+  addendum = {in submission},
+}
+
+@Unpublished{bao2020pnat,
+  author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
+  note   = {in submission},
+  title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
+  year   = {2020},
+}
+
+@Unpublished{dong2020doubly,
+  author   = {Qianqian Dong and Mingxuan Wang and Hao Zhou and Zhen Yang and Bo Xu and Lei Li},
+  title    = {Doubly Supervised Encoder for End-to-end Speech Translation},
+  year     = {2020},
+  addendum = {in submission},
+}
+
+@Unpublished{huang2020acutum,
+  author = {Xunpeng Huang and Zhengyang Liu and Zhe Wang and Yue Yu and Lei Li},
+  title  = {Acutum: an Adaptive Angular Regularized Optimization Algorithm},
+  year   = {2020},
+}
+
+@Unpublished{li2020bidirectional,
+  author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
+  title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
+  year   = {2020},
+}
+
+@Unpublished{miao2020do,
+  author = {Ning Miao and Yuxuan Song and Hao Zhou and Lei Li},
+  title  = {Do you have the right scissors? Tailoring Pre-trained Language Models via Monte-Carlo Methods},
+  year   = {2020},
+}
+
+@Unpublished{pan2020pretraining,
+  author = {Xiao Pan and Mingxuan Wang and Jiangtao Feng and Hao Zhou and Lei Li},
+  title  = {Pretraining Neural Machine Translation by Pretrained Neural Machine Translation},
+  year   = {2020},
+}
+
+@Unpublished{ru2020active,
+  author = {Dongyu Ru and Yating Luo and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
+  title  = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
+  year   = {2020},
+}
+
+@Unpublished{shi2020dispersed,
+  author = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
+  title  = {Dispersing Exponential Family Mixture VAEs},
+  year   = {2020},
+}
+
+@Unpublished{song2020improving,
+  author = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
+  title  = {Improving Maximum Likelihood Training for Text Generation with Density Ratio Estimation},
+  year   = {2020},
+}
+
+@Unpublished{sun2020diving,
+  author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
+  title  = {Diving into Document-Level Neural Machine Translation},
+  year   = {2020},
+}
+
+@Unpublished{tian2020conversational,
+  author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
+  title  = {Conversational Contextualized Multimodal Representation Learning},
+  year   = {2020},
+}
+
+@Unpublished{wu2020textgail,
+  author = {Qingyang Wu and Lei Li and Zhou Yu},
+  title  = {TextGAIL: Generative Adversarial Imitation Learning for Text Generation},
+  year   = {2020},
+}
+
+@Unpublished{yan2020cross,
+  author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
+  title  = {Cross-Lingual Vision-Language Navigation},
+  year   = {2020},
+}
+
 @InProceedings{ye2020variational,
   author    = {Rong Ye and Wenxian Shi and Hao Zhou and Zhongyu Wei and Lei Li},
   booktitle = {International Conference on Learning Representations (ICLR)},
@@ -7,6 +100,7 @@
   year      = {2020},
   month     = apr,
   abstract  = {How to generate descriptions from structured data organized in tables? Existing approaches using neural encoder-decoder models often suffer from lacking diversity. We claim that an open set of templates is crucial for enriching the phrase constructions and realizing varied generations.Learning such templates is prohibitive since it often requires a large paired <table,description>, which is seldom available. This paper explores the problem of automatically learning reusable "templates" from paired and non-paired data. We propose the variational template machine (VTM), a novel method to generate text descriptions from data tables. Our contributions include:  a) we carefully devise a specific model architecture and losses to explicitly disentangle text template and semantic content information, in the latent spaces, and b) we utilize both small parallel data and large raw text without aligned tables to enrich the template learning. Experiments on datasets from a variety of different domains show that VTM is able generate more diversely while keeping a good fluency and quality.},
+  url       = {https://openreview.net/forum?id=HkejNgBtPB},
 }
 
 @InProceedings{zheng2020mirror,
@@ -22,7 +116,7 @@
 }
 
 @InProceedings{huang2020span,
-  author    = {Xunpeng Huang and Xianfeng Liang and Zhengyang Liu and Lei Li and Yue Yu},
+  author    = {Xunpeng Huang and Xianfeng Liang and Zhengyang Liu and Yue Yu and Lei Li},
   booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
   title     = {{SPAN}: A Stochastic Projected Approximate Newton Method},
   year      = {2020},
@@ -47,6 +141,7 @@
   year      = {2020},
   month     = feb,
   abstract  = {Many social media news writers are not professionally trained. Therefore, social media platforms have to hire professional editors to adjust amateur headlines to attract more readers. We propose to automate this headline editing process through neural network models to provide more immediate writing support for these social media news writers. To train such a neural headline editing model, we collected a dataset which contains articles with original headlines and professionally edited headlines. However, it is expensive to collect a large number of professionally edited headlines. To solve this low-resource problem, we design an encoder-decoder model which leverages large scale pre-trained language models. We further improve the pre-trained model's quality by introducing a headline generation task as an intermediate task before the headline editing task. Also, we propose Self Importance-Aware (SIA) loss to address the different levels of editing in the dataset by down-weighting the importance of easily classified tokens and sentences. With the help of Pre-training, Adaptation, and SIA, the model learns to generate headlines in the professional editor's style. Experimental results show that our method significantly improves the quality of headline editing comparing against previous methods.},
+  url       = {https://arxiv.org/abs/1912.01114},
 }
 
 @InProceedings{yang2020towards,
@@ -67,39 +162,11 @@ Our experiments in machine translation show \method gains of up to 3 BLEU score 
 While for the large WMT14 English-French task with 40 millions of sentence-pairs, our base model still significantly improves upon the state-of-the-art Transformer big model by more than 1 BLEU score.},
 }
 
-@Unpublished{bai2019triangular,
-  author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
-  note   = {in submission},
-  title  = {Triangular Neural Machine Translation under Indirect Supervision},
+@TechReport{wang2019solo,
+  author = {Xinlong Wang and Tao Kong and Chunhua Shen and Yuning Jiang and Lei Li},
+  title  = {{SOLO}: Segmenting Objects by Locations},
   year   = {2019},
-}
-
-@Unpublished{bao2019pnat,
-  author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
-  note   = {in submission},
-  title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
-  year   = {2019},
-}
-
-@Unpublished{huang2019acutum,
-  author = {Xunpeng Huang and Zhengyang Liu and Zhe Wang and Yue Yu and Lei Li},
-  note   = {in submission},
-  title  = {Acutum: an Adaptive Angular Regularized Optimization Algorithm},
-  year   = {2019},
-}
-
-@Unpublished{shi2019dispersed,
-  author = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
-  note   = {in submission},
-  title  = {Dispersed Exponential Family Mixture Variational Auto-encoder},
-  year   = {2019},
-}
-
-@Unpublished{sun2019towards,
-  author = {Zewei Sun and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
-  note   = {in submission},
-  title  = {Towards Document-to-Document Neural Machine Translation and a Large Scale Dataset},
-  year   = {2019},
+  url    = {https://arxiv.org/abs/1912.04488},
 }
 
 @InProceedings{miao2019kernelized,
