--- a/leili.bib
+++ b/leili.bib
@@ -247,7 +247,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
   month     = aug,
   note      = {Demos},
   pages     = {6569--6571},
-  addendum  = {demo},
+  addendum  = {Demo},
   doi       = {10.24963/ijcai.2019/959},
   url       = {https://doi.org/10.24963/ijcai.2019/959},
 }
@@ -258,8 +258,8 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
   title     = {{Correct-and-Memorize}: Learning to Translate from Interactive Revisions},
   year      = {2019},
   month     = aug,
-  note      = {Oral Presentation},
   abstract  = {State-of-the-art machine translation models are stillnot on a par with human translators. Previous worktakes human interactions into the neural machine translation process to obtain improved results in target languages. However, not all model-translation errors are equal some are critical while others are minor. In the mean while, same translation mistakes occur repeatedly in similar context. To solve bothissues, we propose CAMIT, a novel method for translating in an interactive environment. Our proposed method works with critical revision instructions,therefore allows human to correct arbitrary words in model-translated sentences. In addition,CAMIT learns from and softly memorizes revision actions based on the context, alleviating the issue of repeating mistakes. Experiments in both ideal and real interactive translation settings demonstrate that our proposed CAMIT enhances machine translation results significantly while requires fewer revision instructions from human compared to previous methods.},
+  addendum  = {Oral},
 }
 
 @InProceedings{bao2019generating,
